--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                         </a>
                         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#c_nav" aria-controls="c_nav" aria-expanded="false" aria-label="Toggle navigation">
                             <span class="navbar-toggler-icon"></span>
-      </button>
+                        </button>
                         <div class="collapse navbar-collapse menu" id="c_nav">
                             <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                                 <li class="nav-item">
@@ -119,7 +119,7 @@
                 <!-- single end -->
                 <!-- single start -->
                 <div class="col-lg-4 col-sm-6 text-center">
-                    <div class="f_icon">
+                    <div class="f_icon mt-lg-5">
                         <i class="fas fa-atom"></i>
                     </div>
                     <div class="f_text">
@@ -130,7 +130,7 @@
                 <!-- single end -->
                 <!-- single start -->
                 <div class="col-lg-4 col-sm-6 text-center">
-                    <div class="f_icon">
+                    <div class="f_icon mt-lg-5">
                         <i class="fas fa-briefcase"></i>
                     </div>
                     <div class="f_text">
@@ -141,7 +141,7 @@
                 <!-- single end -->
                 <!-- single start -->
                 <div class="col-lg-4 col-sm-6 text-center">
-                    <div class="f_icon">
+                    <div class="f_icon mt-lg-5">
                         <i class="fas fa-cloud-upload-alt"></i>
                     </div>
                     <div class="f_text">
@@ -159,9 +159,9 @@
         <div class="container-fluid">
             <div class="row g-1">
                 <!-- single start -->
-                <div class="col-lg-3 col-sm-6 col-6">
+                <div class="col-lg-3 col-sm-6 col-d-block">
                     <div class="w_single">
-                        <div class="box4  ">
+                        <div class="box4 bg-danger">
                             <img src="images/w1.jpg" alt="ActiveBox">
                             <div class="box-content text-center  bg-danger">
                                 <h3 class="title  mb-0">project name</h3>
@@ -172,7 +172,7 @@
                 </div>
                 <!-- single end -->
                 <!-- single start -->
-                <div class="col-lg-3 col-sm-6 col-6">
+                <div class="col-lg-3 col-sm-6 col-d-block">
                     <div class="w_single">
                         <div class="box4">
                             <img src="images/w2.jpg" alt="ActiveBox">
@@ -185,7 +185,7 @@
                 </div>
                 <!-- single end -->
                 <!-- single start -->
-                <div class="col-lg-3 col-sm-6 col-6">
+                <div class="col-lg-3 col-sm-6 col-d-block">
                     <div class="w_single">
                         <div class="box4">
                             <img src="images/w3.jpg" alt="ActiveBox">
@@ -198,7 +198,7 @@
                 </div>
                 <!-- single end -->
                 <!-- single start -->
-                <div class="col-lg-3 col-sm-6 col-6">
+                <div class="col-lg-3 col-sm-6 col-d-block">
                     <div class="w_single">
                         <div class="box4">
                             <img src="images/w4.jpg" alt="ActiveBox">
@@ -211,7 +211,7 @@
                 </div>
                 <!-- single end -->
                 <!-- single start -->
-                <div class="col-lg-3 col-sm-6 col-6">
+                <div class="col-lg-3 col-sm-6 col-d-block">
                     <div class="w_single">
                         <div class="box4">
                             <img src="images/w5.jpg" alt="ActiveBox">
@@ -224,7 +224,7 @@
                 </div>
                 <!-- single end -->
                 <!-- single start -->
-                <div class="col-lg-3 col-sm-6 col-6">
+                <div class="col-lg-3 col-sm-6 col-d-block">
                     <div class="w_single">
                         <div class="box4">
                             <img src="images/w6.jpg" alt="ActiveBox">
@@ -237,7 +237,7 @@
                 </div>
                 <!-- single end -->
                 <!-- single start -->
-                <div class="col-lg-3 col-sm-6 col-6">
+                <div class="col-lg-3 col-sm-6 col-d-block">
                     <div class="w_single">
                         <div class="box4">
                             <img src="images/w7.jpg" alt="ActiveBox">
@@ -250,7 +250,7 @@
                 </div>
                 <!-- single end -->
                 <!-- single start -->
-                <div class="col-lg-3 col-sm-6 col-6">
+                <div class="col-lg-3 col-sm-6 col-d-block">
                     <div class="w_single">
                         <div class="box4">
                             <img src="images/w8.jpg" alt="ActiveBox">
@@ -388,7 +388,10 @@
                                         <!-- slider content -->
                                         <div class="slider_content h-auto ">
                                             <p>“Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Donec sed odio dui. Aenean eu leo quam...”<br>
-                                                <span>Susan Sims, Interaction Designer at XYZ</span> </p>
+                                                <span>
+                                                   Susan Sims, Interaction Designer at XYZ
+                                                </span>
+                                            </p>
                                         </div>
                                     </div>
                                 </div>
@@ -406,26 +409,10 @@
                                         <!-- slider content -->
                                         <div class="slider_content h-auto ">
                                             <p>“Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Donec sed odio dui. Aenean eu leo quam...”<br>
-                                                <span>Susan Sims, Interaction Designer at XYZ</span> </p>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <!-- single item end -->
-                            <!-- single item end -->
-                            <div class="carousel-item slider_item">
-                                <div class="row">
-                                    <div class="col-lg-6">
-                                        <!-- slider image -->
-                                        <div class=" slider_img ">
-                                            <img src="images/t_image.jpg " alt="ActiveBox ">
-                                        </div>
-                                    </div>
-                                    <div class="col-lg-6 ">
-                                        <!-- slider content -->
-                                        <div class="slider_content h-auto ">
-                                            <p>“Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Donec sed odio dui. Aenean eu leo quam...”<br>
-                                                <span>Susan Sims, Interaction Designer at XYZ</span> </p>
+                                                <span>
+                                                   Susan Sims, Interaction Designer at XYZ
+                                                </span>
+                                            </p>
                                         </div>
                                     </div>
                                 </div>
@@ -444,7 +431,10 @@
                                         <!-- slider content -->
                                         <div class="slider_content h-auto ">
                                             <p>“Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Donec sed odio dui. Aenean eu leo quam...”<br>
-                                                <span>Susan Sims, Interaction Designer at XYZ</span> </p>
+                                                <span>
+                                                   Susan Sims, Interaction Designer at XYZ
+                                                </span>
+                                            </p>
                                         </div>
                                     </div>
                                 </div>
@@ -463,7 +453,32 @@
                                         <!-- slider content -->
                                         <div class="slider_content h-auto ">
                                             <p>“Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Donec sed odio dui. Aenean eu leo quam...”<br>
-                                                <span>Susan Sims, Interaction Designer at XYZ</span> </p>
+                                                <span>
+                                                   Susan Sims, Interaction Designer at XYZ
+                                                </span>
+                                            </p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- single item end -->
+                            <!-- single item end -->
+                            <div class="carousel-item slider_item">
+                                <div class="row">
+                                    <div class="col-lg-6">
+                                        <!-- slider image -->
+                                        <div class=" slider_img ">
+                                            <img src="images/t_image.jpg " alt="ActiveBox ">
+                                        </div>
+                                    </div>
+                                    <div class="col-lg-6 ">
+                                        <!-- slider content -->
+                                        <div class="slider_content h-auto ">
+                                            <p>“Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Donec sed odio dui. Aenean eu leo quam...”<br>
+                                                <span>
+                                                   Susan Sims, Interaction Designer at XYZ
+                                                </span>
+                                            </p>
                                         </div>
                                     </div>
                                 </div>
@@ -541,7 +556,11 @@
             <div class="row justify-content-center ">
                 <div class="col-lg-4 text-center ">
                     <div class="f_content ">
-                        <p>Copyright © 2015 ActiveBox. All Rights Reserved Made with <em>&#9829; </em> <span class="text-white ">by Kamal Chaneman</span></p>
+                        <p>Copyright © 2015 ActiveBox. All Rights Reserved Made with
+                            <em>&#9829; </em>
+                            <span class="text-white ">
+                                by Kamal Chaneman
+                            </span></p>
                     </div>
                 </div>
             </div>
